--- a/src/styles/components/_pricing-card.scss
+++ b/src/styles/components/_pricing-card.scss
@@ -1,5 +1,5 @@
 .pricing-card {
-    width: 192px;
+    width: 224px;
     background: linear-gradient(180deg, #1a1a1a 0%, rgba(15, 15, 15, 0) 100%);
     border-radius: 14px;
     padding: 22px 25px 33px;
@@ -8,6 +8,10 @@
     animation: .33s ease-out fadeLeft forwards;
     opacity: 0;
     visibility: hidden;
+    
+    @include min-w($screen-xl) {
+        width: 192px;
+    }
 
     &:nth-child(2) {
         animation-delay: .1s;
